[package]
name = "site-jump"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
actix-files = "0.3.0-alpha.1"
tera = "1.3.1"
argh = "0.1.3"
log = "0.4.8"
chrono = "0.4.13"
url = "2.1.1"
colored = "2.0.0"

[dependencies.actix-web]
version = "3.0.0-beta.1"
features = ["openssl"]

[dependencies.openssl]
version = "0.10.30"
features = ["vendored", "v110"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]